# liney-syntax

./: Cargo.poly.toml  README.md
crates/language/: Cargo.toml
crates/language/examples/: runtime_registry.rs
crates/language/src/: bundle.rs  grammar.rs  helix.rs  lib.rs  query.rs  registry.rs  runtime_paths.rs
crates/language/src/helix/: mod.rs
crates/syntax/: Cargo.toml
crates/syntax-editor/src/: sealed_source.rs  syntax.rs
crates/syntax-editor/src/highlight_cache/: mod.rs
crates/syntax-tree/src/: highlighter.rs  tree_cursor.rs
crates/syntax-tree/src/snapshot/: mod.rs
crates/syntax/examples/: editor_viewport_manager.rs  viewport_manager.rs
crates/syntax/src/: highlight.rs  lib.rs  manager.rs  syntax.rs
crates/syntax/src/highlight_cache/: mod.rs
crates/tree-house/: Cargo.toml
crates/tree-house/examples/: engine_basic.rs  engine_edits.rs
crates/tree-house/src/: config.rs  highlighter.rs  lib.rs  sealed_source.rs
crates/tree-house/src/change/: mod.rs
crates/tree-house/src/session/: mod.rs
crates/tree-house/src/snapshot/: mod.rs
crates/tree-house/src/text/: mod.rs
crates/tree-sitter-queries/: Cargo.toml
crates/tree-sitter-queries/examples/: queries_tags.rs  rust_queries.rs
crates/tree-sitter-queries/src/: lib.rs
