[package]
name = "liney-tree-sitter-queries"
description = "Reusable structural tree-sitter query helpers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
liney-tree-house = { path = "../tree-house" }
ropey.workspace = true

[dev-dependencies]
tree-sitter-rust.workspace = true
